fix: desktop split layout margin right !important to fix overlapping

--- a/style.css
+++ b/style.css
@@ -2971,11 +2971,12 @@ section {
     max-width: 500px !important;
     left: auto !important;
     right: 0 !important;
-    margin-left: auto;
-    margin-right: 0;
+    margin-left: auto !important;
+    margin-right: 0 !important;
+    position: absolute;
   }
   
-  .cover-overlay, .qr-modal-overlay, .modal, .lightbox-modal {
+  .cover-overlay, .qr-modal-overlay, .modal, .lightbox-modal, .bottom-nav {
     position: fixed !important;
   }
   
